--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  
     <div class="container">
      <ul id="recipe-list" class="recipe-list">
-       <li class="recipe-item">
+       <!-- <li class="recipe-item">
        <img src="https://spoonacular.com/recipeImages/12345-312x231.jpg" alt="">
        <h2>Recipe 1</h2>
        <p>
@@ -63,13 +63,13 @@
           Ingredient 3
         </p>
           <a href="#">View Recipe</a>
-          </li>
+          </li> -->
         </ul>
        </div>
 
        <div class="container">
         <ul id="recipe-list">
-          <li class="recipe-item">
+          <!-- <li class="recipe-item">
           <img src="https://spoonacular.com/recipeImages/18695-312x231.jpg" alt="">
           <h2>Recipe 4</h2>
           <p>
@@ -81,7 +81,7 @@
           Ingredient 3
           </p>
           <a href="ok.html">View Recipe</a>
-          </li>
+          </li> -->
         </ul>
        </div>
 
